# oxbow-rpc

./: .gitmodules  README.md  build.sh  meson.build
include/: global.h  profile.h  rdma.h  rpc.h  shmem.h  shmem_cm.h
lib/: install.sh
src/: rpc.c  rpc_client.c  rpc_common.c  rpc_server.c
src/channel/: rdma.c  shmem.c  shmem_cm.c
test/: latency_microbench.c  meson.build  rdma_ch_client_test.c  rdma_ch_server_test.c  rpc_client_test.c  rpc_msgbuf_test.c  rpc_multi_client_test.c  rpc_multi_server_test.c  rpc_server_test.c  test_global.h
